start navbar and section component

--- a/project-condor-landing/public/index.html
+++ b/project-condor-landing/public/index.html
@@ -15,12 +15,13 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <link
       rel="shortcut icon"
       type="image/png"
       href="%PUBLIC_URL%/assets/icon/favicon.png"
     />
+    <!-- TODO: Remove before production -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
