finish hero and info sections

--- a/project-condor-landing/public/index.html
+++ b/project-condor-landing/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Project Condor</title>
 
     <base href="/" />
 
@@ -20,8 +20,6 @@
       type="image/png"
       href="%PUBLIC_URL%/assets/icon/favicon.png"
     />
-    <!-- TODO: Remove before production -->
-    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
