--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="full-screen-video-container">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="imgs/carLoop.mp4" type="video/mp4" />
             </video>
             <div class="full-screen-video-content">
